gateway/1.1/modules/ROOT/pages/flex-install.adoc
= Installing Flex Gateway
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images


You can install Flex Gateway as a Linux service, in a Docker container, or as a Kubernetes Ingress controller.

* If you want to run your Flex Gateway inside of a virtual machine (VM), install
it as a Linux service. 
* If you want try the product quickly or demonstrate some of the product's capabilities in a non-production
scenario, install it in a Docker container.
* If you want use Flex Gateway as a load balancer at the edge of a Kubernetes cluster,
install it as a Kubernetes Ingress controller.

[cols="1a,1a,1a"]
|===
|image:install-linux-logo.png[20%,20%,xref="flex-install.adoc#install-as-a-linux-service"]
|image:install-docker-logo.png[25%,25%,xref="flex-install.adoc#install-in-a-docker-container"]
|image:install-kubernetes-logo.png[20%,20%,xref="flex-install.adoc#install-as-a-kubernetes-ingress-controller"]

|xref:flex-install.adoc#install-as-a-linux-service[Install as a Linux Service]
|xref:flex-install.adoc#install-in-a-docker-container[Install in a Docker Container]
|xref:flex-install.adoc#install-as-a-kubernetes-ingress-controller[Install as a Kubernetes Ingress Controller]
|===

== Install as a Linux Service

The process of installing Flex Gateway as a Linux service includes the following tasks:

* Install dependencies
* Run the installation commands
* Verify successful installation

=== Before You Begin

Before getting started, ensure that you have installed the following: 

* link:https://curl.se/[curl] 
* link:https://www.vim.org/[vim]
* link:https://gnupg.org/[gnupg2]
* link:https://refspecs.linuxfoundation.org/LSB_3.0.0/LSB-PDA/LSB-PDA/lsbrelease.html[lsb-release]
* link:https://man7.org/linux/man-pages/man1/systemctl.1.html[systemctl]

=== Run Installation Commands

To install Flex Gateway as a Linux service execute the command block which does the following actions: 

* Retrieves the public package keys and adds the package repository
* Updates the package list
* Updates `apt-get`
* Installs the Flex Gateway package

[source,ssh]
----
curl -XGET https://flex-packages.anypoint.mulesoft.com/ubuntu/pubkey.gpg | sudo apt-key add -

echo "deb [arch=amd64] https://flex-packages.anypoint.mulesoft.com/ubuntu $(lsb_release -cs) main" \
| sudo tee /etc/apt/sources.list.d/mulesoft.list

sudo apt update

sudo apt install -y flex-gateway
----

include::partial$reference-install-next-steps.adoc[]

== Install in a Docker Container 

To install Flex Gateway in a Docker container: 

. Download the Flex Gateway Docker image: 
+
[source,ssh,subs=attributes+]
----
docker pull mulesoft/flex-gateway:{gateway-ver-var}
----

. Verify the installation was successful: 
+
[source,ssh]
----
docker images
----
+
You should see the Flex Gateway container image in the resulting list. 
+
[source,text,subs=attributes+]
----
REPOSITORY                   TAG
mulesoft/flex-gateway        {gateway-ver-var}
----

include::partial$reference-install-next-steps.adoc[]

== Install as a Kubernetes Ingress Controller

To install Flex Gateway as a Kubernetes Ingress controller download the Flex Gateway container image: 

[source,ssh,subs=attributes+]
----
docker pull mulesoft/flex-gateway:{gateway-ver-var}
----

include::partial$reference-install-next-steps.adoc[]

== See Also

* xref:flex-gateway-getting-started.adoc[Get Started with Flex Gateway]
* xref:flex-conn-reg-run.adoc[Register and Run in Connected Mode]
* xref:flex-local-reg-run.adoc[Register and Run in Local Mode]
